updated title image and CSS

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
 <body>
     <div class="container">
-        <h1>Hangman</h1>
         <div class="row">
             <div class="col-md-6 gameplay-column">
+                <!--testing title image-->
+                <img id="title-image" src="assets/images/hangman_title_1.png" alt="hangman_title_image"/>
+
                 <img id="youwin-image" src="assets/images/oprah.png" alt="winning_image"/>
                 <img id="gameover-image" src="assets/images/the_office.png" alt="losing_image"/>
                 <h2 id="pressKeyTryAgain">Press any key to Try Again!</h2>
